--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -4,3 +4,18 @@
   padding: 0;
   font-family: Arial, sans-serif;
 }
+
+.form-container {
+  background: rgb(0, 0, 0, 0.8);
+  /* position: fixed; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 18em;
+  height: 13em;
+  box-shadow: 0 5px 16px rgb(0 0 0 / 20%);
+  /* position: relative; */
+  /* z-index: 10; */
+  border-radius: 10px;
+}
