--- a/src/components/UpcomingBirthdays/UpcomingBirthdays.css
+++ b/src/components/UpcomingBirthdays/UpcomingBirthdays.css
@@ -5,3 +5,16 @@
   margin-left: 5px;
   height: 100vh
 }
+
+.name-area {
+  list-style: none;
+  padding-left: 10px
+}
+
+.check-area {
+  padding: 5px
+}
+
+.fa-check {
+  top: 5px;
+}
