--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -12,10 +12,11 @@
   position: fixed;
   display: flex;
   justify-content: center;
+  margin-top: 9em;
 }
 
 .form-wrapper {
-  width: 18em;
+  width: 20em;
   height: 13em;
   /* align-items: center; */
   /* flex-direction: column; */
@@ -27,7 +28,7 @@
   position: relative;
   /* z-index: 10; */
   border-radius: 10px;
-  margin-top: 10em;
+  margin-top: 5em;
 }
 
 .form-img {
@@ -46,11 +47,21 @@
   color: #141414;
 }
 
+.form-name{
+  width: 10em;
+}
+
+.form-date {
+  width: 10.3em;
+  margin-top: 5px;
+}
+
 .form-button {
   padding: 10px 24px;
   background: #141414;
   color: #fff;
   border: none;
+  margin-top: 10px;
 }
 
 .close-form {
