--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -16,8 +16,8 @@
 }
 
 .form-wrapper {
-  width: 20em;
-  height: 13em;
+  width: 22em;
+  height: 18em;
   /* align-items: center; */
   /* flex-direction: column; */
   box-shadow: 0 5px 16px rgb(0 0 0 / 20%);
@@ -46,14 +46,28 @@
   line-height: 1.8;
   color: #141414;
 }
+.form-name,
+.form-date,
+.form-memo {
+  margin-bottom: 5px;
+}
 
-.form-name{
+.form-name {
   width: 10em;
+}
+
+.form-label {
+  font-size: 10px;
+  font-weight: bold;
 }
 
 .form-date {
   width: 10.3em;
-  margin-top: 5px;
+}
+
+.form-memo {
+  width: 10.2em;
+  height: 4em;
 }
 
 .form-button {
@@ -61,7 +75,6 @@
   background: #141414;
   color: #fff;
   border: none;
-  margin-top: 10px;
 }
 
 .close-form {
