Add Link to Friends and remove Redirect from FriendPage

--- a/src/components/Friends/Friends.css
+++ b/src/components/Friends/Friends.css
@@ -2,5 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 3fr);
   border: 1px solid black;
-  cursor: pointer
+  cursor: pointer;
+  text-decoration: none;
+  color: #000000
 }
