--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,3 +2,25 @@ html, body {
   background: #FFECD6;
   font-family: 'Zen Loop', cursive;
 }
+
+.main {
+  display: grid;
+  grid-template-rows: 7% 93%;
+}
+
+.styling-header {
+  background: yellow;
+}
+
+.styling-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.top-half {
+  display: flex;
+  /* flex-direction: column; */
+}
+
+
