--- a/src/components/UpcomingBirthdays/UpcomingBirthdays.css
+++ b/src/components/UpcomingBirthdays/UpcomingBirthdays.css
@@ -1,9 +1,11 @@
 .birthdayArea {
-  border: 1px solid #403F3E;
+  /* border: 1px solid #403F3E;
   float: left;
   padding: 15px 100px 15px 15px;
   margin-left: 5px;
-  height: 100vh
+  height: 100vh */
+  width: 25%;
+  background: white;
 }
 
 .name-area {
