--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,9 +8,8 @@ html, body {
   grid-template-rows: 7% 93%;
 }
 
-.styling-header {
-  background: yellow;
-}
+/* .styling-header {
+} */
 
 .styling-content {
   height: 100%;
@@ -20,7 +19,6 @@ html, body {
 
 .top-half {
   display: flex;
-  /* flex-direction: column; */
 }
 
 
