--- a/src/components/UpcomingBirthdays/UpcomingBirthdays.css
+++ b/src/components/UpcomingBirthdays/UpcomingBirthdays.css
@@ -1,8 +1,8 @@
 .birthdayArea {
-  /* border: 1px solid #403F3E;
-  float: left;
-  padding: 15px 100px 15px 15px;
-  margin-left: 5px;
+  border: 1px solid #403F3E;
+  /* float: left; */
+  padding: 3%;
+  /* margin-left: 5px;
   height: 100vh */
   width: 25%;
   background: white;
