--- a/src/components/AddFriend/AddFriend.css
+++ b/src/components/AddFriend/AddFriend.css
@@ -3,19 +3,27 @@
 }
 
 .add-friend {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 20em;
 }
 
-.add-friend-button {
-  min-width: 100px;
+.plus-label {
+  /* min-width: 100px;
   padding: 10px 30px;
   border-radius: 4px;
   border: none;
-  background-color: #141414;
-  color: #fff;
-  font-size: 15px;
-  cursor: pointer;
+  background-color: white; */
+  color: black;
+  font-size: 65px;
+  font-family: 'Satisfy', cursive; 
+}
+
+.add-section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
