--- a/src/components/AddFriend/AddFriend.css
+++ b/src/components/AddFriend/AddFriend.css
@@ -11,11 +11,6 @@
 }
 
 .plus-label {
-  /* min-width: 100px;
-  padding: 10px 30px;
-  border-radius: 4px;
-  border: none;
-  background-color: white; */
   color: black;
   font-size: 65px;
   font-family: 'Satisfy', cursive; 
@@ -26,4 +21,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.fa-plus {
+  cursor: pointer;
+}
+
+.fa-plus:active {
+  transform: scale(0.9);
 }
