--- a/src/components/Friends/Friends.css
+++ b/src/components/Friends/Friends.css
@@ -1,8 +1,42 @@
+.friends {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.friend-list {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.list-title {
+  text-align: center;
+  font-size: 50px;
+}
+
 .friend {
-  display: grid;
-  grid-template-columns: repeat(3, 3fr);
-  border: 1px solid black;
-  cursor: pointer;
-  text-decoration: none;
-  color: #000000
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.avatar {
+  width: 120px;
+  height: 120px;
+  border: solid black 4px;
+  border-radius: 50%;
+  padding: 0;
+  margin: 10px;
+}
+
+.friend-name {
+  font-size: 25px;
+}
+
+.friend-name:hover {
+  font-size: 30px;
+  cursor:pointer;
 }
