--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,11 +1,12 @@
 html, body {
   background: #FFECD6;
   font-family: 'Zen Loop', cursive;
+  letter-spacing: .1em;
 }
 
 .main {
   display: grid;
-  grid-template-rows: 7% 93%;
+  grid-template-rows: 12% 88%;
 }
 
 /* .styling-header {
