--- a/src/components/UpcomingBirthdays/UpcomingBirthdays.css
+++ b/src/components/UpcomingBirthdays/UpcomingBirthdays.css
@@ -1,11 +1,11 @@
 .birthdayArea {
-  border: 1px solid #403F3E;
-  /* float: left; */
   padding: 3%;
-  /* margin-left: 5px;
-  height: 100vh */
   width: 25%;
-  background: white;
+  background-image: url('../../assets/pngegg.png');
+  background-position: center;
+  margin-left: 3%;
+  background-size: cover;
+  font-family: 'Shadows Into Light', cursive;
 }
 
 .name-area {
