--- a/src/components/AddFriend/AddFriend.css
+++ b/src/components/AddFriend/AddFriend.css
@@ -17,14 +17,21 @@
 }
 
 .add-section {
-  width: 100%;
+  width: 65%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: solid black 3px;
+  padding: 5%;
+  border-radius: 10px;
 }
 
 .fa-plus {
   cursor: pointer;
+}
+
+.fa-plus:hover {
+  transform: scale(1.2);
 }
 
 .fa-plus:active {
