--- a/src/components/UpcomingBirthdays/UpcomingBirthdays.css
+++ b/src/components/UpcomingBirthdays/UpcomingBirthdays.css
@@ -2,9 +2,10 @@
   padding: 3%;
   width: 25%;
   background-image: url('../../assets/pngegg.png');
-  background-position: center;
+  background-position: center center;
   margin-left: 3%;
   background-size: cover;
+  /* background-attachment: fixed; */
   font-family: 'Shadows Into Light', cursive;
 }
 
