--- a/src/components/UpcomingBirthdays/UpcomingBirthdays.css
+++ b/src/components/UpcomingBirthdays/UpcomingBirthdays.css
@@ -1,10 +1,10 @@
 .birthdayArea {
-  padding: 3%;
+  /* padding: 5%; */
   width: 25%;
-  background-image: url('../../assets/pngegg.png');
-  background-position: center center;
   margin-left: 3%;
-  background-size: cover;
+  background-image: url('../../assets/pngegg.png');
+  background-position: left;
+  background-size: cover !important;
   /* background-attachment: fixed; */
   font-family: 'Shadows Into Light', cursive;
 }
