--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -9,10 +9,10 @@
   width: 100%;
   height: 100%;
   background: rgb(0, 0, 0, 0.8);
-  position: fixed;
-  display: flex;
+  /* /* position: fixed; */
+  display: flex; 
   justify-content: center;
-  margin-top: 34em;
+  /* margin-top: 34em; */
 }
 
 .form-wrapper {
@@ -26,7 +26,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   position: relative;
-  /* z-index: 10; */
+  z-index: 10;
   border-radius: 10px;
   margin-top: 5em;
 }
