--- a/src/components/UpcomingBirthdays/UpcomingBirthdays.css
+++ b/src/components/UpcomingBirthdays/UpcomingBirthdays.css
@@ -9,8 +9,12 @@
 }
 
 .name-area {
-  list-style: none;
-  padding-left: 10px
+  list-style-type: none;
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .check-area {
