--- a/src/components/FriendPage/FriendPage.css
+++ b/src/components/FriendPage/FriendPage.css
@@ -1,3 +1,24 @@
 .hidden {
   display: none
 }
+
+.friend-gift-page {
+  margin-top: 10%;
+}
+
+.friend-info {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+
+}
+
+.friend-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.top-section {
+  display: flex;
+  justify-content: space-between;
+}
