Style middle section with birthdays and add friend

--- a/src/components/UpcomingBirthdays/UpcomingBirthdays.css
+++ b/src/components/UpcomingBirthdays/UpcomingBirthdays.css
@@ -1,30 +1,68 @@
-.birthdayArea {
-  /* padding: 5%; */
-  width: 25%;
-  margin-left: 3%;
-  background-color: cadetblue;
-  border: solid black 3px;
-  border-radius: 10px;
-  font-family: 'Shadows Into Light', cursive;
+@media screen and (min-device-width: 320px) {
+  .birthdayArea {
+    width: 40%;
+    margin-left: 3%;
+    background-color: cadetblue;
+    border: solid black 3px;
+    border-radius: 10px;
+    font-family: 'Shadows Into Light', cursive;
+    padding-right: 12px;
+  }
+  
+  .upcoming {
+    margin-left: 6%;
+  }
+  
+  .name-area {
+    list-style-type: none;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+  }
+  
+  .check-area {
+    display: flex
+  }
+  
+  .check {
+    font-size: 30px
+  }
 }
-
-.upcoming {
-  margin-left: 6%;
+@media screen and (min-width: 321px) {}
+@media screen and (min-width: 750px) {
+  .birthdayArea {
+    width: 25%;
+    margin-left: 3%;
+    background-color: cadetblue;
+    border: solid black 3px;
+    border-radius: 10px;
+    font-family: 'Shadows Into Light', cursive;
+    padding-right: 0;
+  }
+  
+  .upcoming {
+    margin-left: 6%;
+  }
+  
+  .name-area {
+    list-style-type: none;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+  }
+  
+  .check-area {
+    display: flex
+  }
+  
+  .check {
+    font-size: 30px
+  }
 }
-
-.name-area {
-  list-style-type: none;
-  padding-left: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-}
-
-.check-area {
-  display: flex
-}
-
-.check {
-  font-size: 30px
-}
+@media screen and (min-width: 900px) {}
+@media screen and (min-width: 1300px) {}
+@media screen and (min-width: 1600px) {}
