--- a/src/components/AddFriend/AddFriend.css
+++ b/src/components/AddFriend/AddFriend.css
@@ -2,39 +2,65 @@
   border: 1px solid red;
 }
 
-.add-friend {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 20em;
-}
+@media screen and (min-device-width: 320px) {
+  .add-friend {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20em;
+  }
+  
+  .plus-label {
+    color: black;
+    font-size: 19px;
+    font-family: 'Satisfy', cursive; 
+  }
+  
+  .add-section {
+    width: 65%;
+    height: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid black 3px;
+    padding: 5%;
+    border-radius: 10px;
+    background-color: darksalmon;
+  }
+  
+  .fa-plus {
+    margin-top: 10px;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  .fa-plus:hover {
+    transform: scale(1.2);
+  }
+  
+  .fa-plus:active {
+    transform: scale(0.9);
+  }
+};
 
-.plus-label {
-  color: black;
-  font-size: 65px;
-  font-family: 'Satisfy', cursive; 
+@media screen and (min-width: 321px) {}
+@media screen and (min-width: 750px) {
+  .plus-label {
+    color: black;
+    font-size: 65px;
+    font-family: 'Satisfy', cursive; 
+  }
+  
+  .add-section {
+    height: 50%;
+  }
+  
+  .fa-plus {
+    font-size: 60px;
+  }
 }
+@media screen and (min-width: 900px) {}
+@media screen and (min-width: 1300px) {}
+@media screen and (min-width: 1600px) {}
 
-.add-section {
-  width: 65%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: solid black 3px;
-  padding: 5%;
-  border-radius: 10px;
-  background-color: darksalmon;
-}
-
-.fa-plus {
-  cursor: pointer;
-}
-
-.fa-plus:hover {
-  transform: scale(1.2);
-}
-
-.fa-plus:active {
-  transform: scale(0.9);
-}
