--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,3 +1,10 @@
+@media screen and (min-device-width: 320px) {}
+@media screen and (min-width: 321px) {}
+@media screen and (min-width: 750px) {}
+@media screen and (min-width: 900px) {}
+@media screen and (min-width: 1300px) {}
+@media screen and (min-width: 1600px) {}
+
 .form {
   box-sizing: border-box;
   margin: 0;
