--- a/src/components/Friends/Friends.css
+++ b/src/components/Friends/Friends.css
@@ -1,42 +1,52 @@
-.friends {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+@media screen and (min-device-width: 320px) {
+  .friends {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  
+  .friend-list {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  
+  .list-title {
+    text-align: center;
+    font-size: 50px;
+  }
+  
+  .friend {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .avatar {
+    width: 120px;
+    height: 120px;
+    border: solid black 3px;
+    border-radius: 50%;
+    padding: 0;
+    margin: 10px;
+  }
+  
+  .friend-name {
+    font-size: 25px;
+  }
+  
+  .friend-name:hover {
+    transform: scale(1.2);
+    cursor:pointer;
+  }
+}
+@media screen and (min-width: 321px) {}
+@media screen and (min-width: 750px) {
+  .friend {
+    width: 25%;
+  }
 }
 
-.friend-list {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
 
-.list-title {
-  text-align: center;
-  font-size: 50px;
-}
-
-.friend {
-  width: 25%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.avatar {
-  width: 120px;
-  height: 120px;
-  border: solid black 3px;
-  border-radius: 50%;
-  padding: 0;
-  margin: 10px;
-}
-
-.friend-name {
-  font-size: 25px;
-}
-
-.friend-name:hover {
-  transform: scale(1.2);
-  cursor:pointer;
-}
