--- a/src/components/AddFriend/AddFriend.css
+++ b/src/components/AddFriend/AddFriend.css
@@ -1,38 +1,35 @@
-* {
-  border: 1px solid red;
-}
-
 @media screen and (min-device-width: 320px) {
   .add-friend {
-    width: 100%;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    height: 20em;
+    display: flex;
+    height: 16em;
+    justify-content: center;
+    width: 100%;
   }
   
   .plus-label {
     color: black;
-    font-size: 19px;
     font-family: 'Satisfy', cursive; 
+    font-size: 19px;
   }
   
   .add-section {
-    width: 65%;
-    height: 25%;
+    align-items: center;
+    background-color: darksalmon;
+    border: solid black 3px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    border: solid black 3px;
+    height: 25%;
+    margin-bottom: 5em;
     padding: 5%;
-    border-radius: 10px;
-    background-color: darksalmon;
+    width: 65%;
   }
   
   .fa-plus {
-    margin-top: 10px;
-    font-size: 20px;
     cursor: pointer;
+    font-size: 20px;
+    margin-top: 10px;
   }
   
   .fa-plus:hover {
@@ -46,21 +43,23 @@
 
 @media screen and (min-width: 321px) {}
 @media screen and (min-width: 750px) {
+  .add-friend {
+    height: 20em;
+    margin-bottom: 2em;
+  }
+
   .plus-label {
     color: black;
-    font-size: 65px;
     font-family: 'Satisfy', cursive; 
+    font-size: 65px;
   }
   
   .add-section {
     height: 50%;
+    margin-bottom: 0;
   }
   
   .fa-plus {
     font-size: 60px;
   }
-}
-@media screen and (min-width: 900px) {}
-@media screen and (min-width: 1300px) {}
-@media screen and (min-width: 1600px) {}
-
+};
