--- a/src/components/Friends/Friends.css
+++ b/src/components/Friends/Friends.css
@@ -1,36 +1,37 @@
 @media screen and (min-device-width: 320px) {
   .friends {
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    width: 100%;
   }
   
   .friend-list {
     display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
+    justify-content: space-evenly;
   }
   
   .list-title {
-    text-align: center;
     font-size: 50px;
+    margin-bottom: 0;
+    text-align: center;
   }
   
   .friend {
-    width: 40%;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 40%;
   }
   
   .avatar {
-    width: 120px;
-    height: 120px;
     border: solid black 3px;
     border-radius: 50%;
-    padding: 0;
+    height: 120px;
     margin: 10px;
+    padding: 0;
+    width: 120px;
   }
   
   .friend-name {
@@ -38,15 +39,15 @@
   }
   
   .friend-name:hover {
-    transform: scale(1.2);
     cursor:pointer;
+    transform: scale(1.2);
   }
-}
-@media screen and (min-width: 321px) {}
+};
+
 @media screen and (min-width: 750px) {
   .friend {
     width: 25%;
   }
-}
+};
 
 
