--- a/src/components/UpcomingBirthdays/UpcomingBirthdays.css
+++ b/src/components/UpcomingBirthdays/UpcomingBirthdays.css
@@ -1,14 +1,16 @@
 @media screen and (min-device-width: 320px) {
-  .birthdayArea {
-    width: 40%;
-    margin-left: 3%;
+  .birthday-area {
     background-color: cadetblue;
     border: solid black 3px;
     border-radius: 10px;
     font-family: 'Shadows Into Light', cursive;
+    height: 80%;
+    margin-left: 3%;
     padding-right: 12px;
     overflow: scroll;
-    height: 70%; 
+    overflow-x: hidden;
+    overflow-y: hidden;
+    width: 40%;
   }
   
   .upcoming {
@@ -16,11 +18,11 @@
   }
   
   .name-area {
-    list-style-type: none;
-    padding-left: 10px;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    list-style-type: none;
+    padding-left: 10px;
   }
   
   .check-area {
@@ -32,9 +34,12 @@
   }
 };
 
+@media screen and (min-width: 321px) {}
 @media screen and (min-width: 750px) {
   .birthdayArea {
     width: 25%;
     padding-right: 0;
+    height: 98%;
+    overflow: hidden;
   }
 };
