--- a/src/components/Friends/Friends.css
+++ b/src/components/Friends/Friends.css
@@ -43,7 +43,7 @@
     transform: scale(1.2);
   }
 };
-
+@media screen and (min-width: 321px) {}
 @media screen and (min-width: 750px) {
   .friend {
     width: 25%;
