--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,6 +27,7 @@
     width: 50%;
   }
 
+@media screen and (min-width: 321px) {}
 @media screen and (min-width: 750px) {
   .title {
     font-size: 50px;
