--- a/src/components/AddFriend/AddFriend.css
+++ b/src/components/AddFriend/AddFriend.css
@@ -6,40 +6,48 @@
   width: 100%;
 }
 
-.plus-label {
-  color: black;
-  font-family: 'Satisfy', cursive; 
-  font-size: 19px;
-}
+  .add-friend {
+    align-items: center;
+    display: flex;
+    height: 30%;
+    justify-content: center;
+    width: 100%;
+  }
+  
+  .plus-label {
+    color: black;
+    font-family: 'Satisfy', cursive; 
+    font-size: 40px;
+  }
+  
+  .add-section {
+    align-items: center;
+    background-color: darksalmon;
+    border: solid black 3px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    height: 25%;
+    margin-bottom: 5em;
+    padding: 5%;
+    width: 65%;
+  }
+  
+  .fa-plus {
+    cursor: pointer;
+    font-size: 500px;
+    margin-top: 10px;
+  }
+  
+  .fa-plus:hover {
+    transform: scale(1.2);
+  }
+  
+  .fa-plus:active {
+    transform: scale(0.9);
+  }
 
-.add-section {
-  align-items: center;
-  background-color: darksalmon;
-  border: solid black 3px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  height: 25%;
-  margin-bottom: 5em;
-  padding: 5%;
-  width: 65%;
-}
-
-.fa-plus {
-  cursor: pointer;
-  font-size: 20px;
-  margin-top: 10px;
-}
-
-.fa-plus:hover {
-  transform: scale(1.2);
-}
-
-.fa-plus:active {
-  transform: scale(0.9);
-}
-
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 650px) {
   .add-friend {
     height: 20em;
     margin-bottom: 2em;
@@ -48,7 +56,7 @@
   .plus-label {
     color: black;
     font-family: 'Satisfy', cursive; 
-    font-size: 63px;
+    font-size: 45px;
   }
   
   .add-section {
@@ -60,3 +68,13 @@
     font-size: 60px;
   }
 };
+
+@media screen and (min-width: 850px) {
+  .plus-label {
+    font-size: 65px;
+  }
+
+  .fa-plus {
+    font-size: 60px;
+  }
+}
