--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -32,9 +32,9 @@ a {
   .top-half {
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     margin-top: 2%;
-    height: 30%;
+    height: 50%;
   }
 }
 
