--- a/src/components/GiftCard/GiftCard.css
+++ b/src/components/GiftCard/GiftCard.css
@@ -2,11 +2,42 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid black;
+  justify-content: space-evenly;
+  border: 3px solid black;
   width: 15em;
   height: 12em;
+  margin-top: 4%;
+  /* background-color: white; */
 }
 
 .gift-avatar {
   width: 5em;
+}
+
+.gift-title {
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.purchased {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.purchase-section {
+  margin-right: 7%;
+}
+
+.bottom-row {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.gift-card-button {
+  font-weight: bold;
+  font-family: 'Zen Loop', cursive;
+  font-size: 20px;
+  background-color: #EBBA82;
 }
