--- a/src/components/FriendPage/FriendPage.css
+++ b/src/components/FriendPage/FriendPage.css
@@ -1,7 +1,3 @@
-.hidden {
-  display: none
-}
-
 .friend-gift-page {
   margin-top: 10%;
   display: flex;
@@ -80,4 +76,22 @@
 
 .button:active {
   transform: scale(.9);
+}
+
+@media screen and (max-width: 550px) {
+  .top-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .friend-info {
+    width: 80%;
+    margin-bottom: 5%;
+  }
+
+  .add-a-gift {
+    width: 70%;
+    font-size: 25px;
+  }
 }
