--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -22,10 +22,15 @@ a {
 
 .top-half {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 5%;
   height: 100%;
   justify-content: flex-start;
+}
+
+.loading {
+  text-align: center;
+  font-size: 40px;
 }
 
 @media screen and (max-width: 650px) {
