--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,105 +1,113 @@
+.form {
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-  .form {
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+.form-background {
+  background: rgb(0, 0, 0, 0.8);
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+}
 
-  .form-background {
-    background: rgb(0, 0, 0, 0.8);
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 100%;
-  }
+.form-wrapper {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 5px 16px rgb(0 0 0 / 20%);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 29em;
+  margin-top: 5em;
+  position: relative;
+  width: 35em;
+}
 
-  .form-wrapper {
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 5px 16px rgb(0 0 0 / 20%);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 22em;
-    margin-top: 5em;
-    position: relative;
-    width: 35em;
-  }
-  
-  .form-title {
-    font-size: 22px;
-    margin: 0;
-  }
+.form-title {
+  font-size: 22px;
+  margin: 0;
+}
 
-  .form-img {
-    background: #000;
-    border-radius: 10px 0 0 10px;
-    height: 50%;
-    margin-top: 5em;
-    width: 100%;
-  }
+.form-img {
+  background: #000;
+  border-radius: 10px 0 0 10px;
+  height: 50%;
+  margin-top: 5em;
+  width: 100%;
+}
 
-  .form-content {
-    align-items: center;
-    display: flex;
-    color: #141414;
-    flex-direction: column;
-    justify-content: center;
-    line-height: 1.8;
-  }
+.form-content {
+  align-items: center;
+  display: flex;
+  color: #141414;
+  flex-direction: column;
+  justify-content: center;
+  line-height: 1.8;
+}
 
-  .form-name,
-  .form-date,
-  .form-memo {
-    margin-bottom: 5px;
-  }
+.form-name,
+.form-date,
+.form-memo {
+  margin-bottom: 5px;
+}
 
-  .form-name {
-    width: 10em;
-  }
+.form-name {
+  width: 10em;
+}
 
-  .form-label,
-  .birthday-label {
-    font-size: 14px;
-    font-weight: bold;
-  }
+.form-label,
+.birthday-label {
+  font-size: 14px;
+  font-weight: bold;
+}
 
-  .birthday-label {
-    margin-top: 5px;
-    width: 10em;
-  }
+.birthday-label {
+  width: 10em;
+}
 
-  .form-date {
-    width: 10.3em;
-  }
+.form-date {
+  width: 10.3em;
+}
 
-  .form-memo {
-    height: 4em;
-    width: 10.2em;
-  }
+.form-memo {
+  height: 4em;
+  width: 10.2em;
+}
 
-  .form-button {
-    background: #141414;
-    border: none;
-    color: #fff;
-    margin-top: 0px;
-    padding: 10px 24px;
-  }
+.form-button {
+  background: #141414;
+  border: none;
+  color: #fff;
+  margin-top: 0px;
+  padding: 10px 24px;
+}
 
-  .close-form {
-    cursor: pointer;
-    height: 32px;
-    position: absolute;
-    right: 5px;
-    width: 20px;
-  }
+.close-form {
+  cursor: pointer;
+  height: 32px;
+  position: absolute;
+  right: 5px;
+  width: 20px;
+}
+
+.error {
+  color: red;
+  margin: 0;
+}
+
+.post-error {
+  width: 9em;
+  font-size: 16px;
+}
 
 @media all and (min-width: 750px) {
   .form-wrapper {
-    height: 24em;
+    height: 28em;
   }
   
   .form-img {
@@ -112,7 +120,6 @@
   }
 
   .birthday-label {
-    margin-top: 5px;
     width: 14em;
   }
 
@@ -123,9 +130,5 @@
   .form-memo {
     height: 4em;
     width: 14.2em;
-  }
-
-  .form-button {
-    margin-top: 20px;
   }
 };
